<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CoviGuide</string>
    <string name="start">Start</string>
    <string name="coviguide">CoviGuide</string>
    <string name="moretext">pour plus d\'informations sur la situation pandamique en tunisie, visitez ce site :</string>
    <string name="visit_site">visiter le  site</string>
    <string name="title_activity_scrolling_activityaboutapp">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Paramètre</string>
    <string name="aboutapptext">CoviGuide vous aidera à en savoir plus sur l\'état de la pandamique en Tunisie en visitant le site dentifié dans la page d\'accueil, Aso cela vous aidera à être plus conscient du danger du virus, de ses symptômes, et cela aidera vous trouvez des choses amusantes et saines à faire lorsque vous êtes en quarantaine
</string>
    <string name="coronavirusdefinition">La maladie à coronavirus (COVID-19) est une maladie infectieuse
        causée par un coronavirus nouvellement découvert.
        La plupart des personnes infectées par le virus COVID-19 souffriront
        d\'une maladie respiratoire légère à modérée et se rétabliront
        sans nécessiter de traitement spécial.
        Les personnes âgées et celles ayant des problèmes médicaux sous-jacents tels que les maladies cardiovasculaires,
        le diabète, les maladies respiratoires chroniques et le cancer sont plus
        susceptibles de développer une maladie grave.Le virus COVID-19 se propage
        principalement par des gouttelettes de salive ou des écoulements nasaux lorsqu\'une personne infectée tousse.
        ou éternue, il est donc important que vous pratiquiez également l\'étiquette respiratoire
        (par exemple, en toussant dans un coude fléchi)
</string>
    <string name="Sym1">CoronaVirus Symptoms  :</string>

    <string name="about_virusButton">
À propos du virus</string>
    <string name="symptoms">Les Symptoms</string>
    <string name="how_to_protectButton">Comment protéger</string>
    <string name="how_to_protect">Comment protéger</string>
    <string name="things_to_do">Choses à faire</string>
    <string name="home_isolation">Règles d\'isolement du domicile</string>
    <string name="rule1">- Restez à la maison pendant 7 jours.
</string>
    <string name="rule2">- N\'accueillez pas de personnes extérieures chez vous.</string>
    <string name="rule3">- Aérez votre maison.</string>
    <string name="rule4">-
Éloignez-vous des personnes avec lesquelles vous vivez</string>
    <string name="rule5">- Si possible, utilisez une salle de bain différente de celle des personnes avec lesquelles vous vivez.</string>
    <string name="rule6">- Si possible, utilisez une chambre différente de celle des personnes avec lesquelles vous vivez.</string>
    <string name="how_to_protect_from_coronavirus">Comment se protéger du coronavirus</string>
    <string name="advice1">- Nettoyez-vous souvent les mains</string>
    <string name="advice2">-
Toussez ou éternuez dans votre coude plié - pas dans vos mains!</string>
    <string name="advice3">-
Évitez de toucher vos yeux, votre nez et votre bouche</string>
    <string name="advice4">- Limitez les rassemblements sociaux et le temps passé dans les endroits bondés</string>
    <string name="advice5">-
Évitez tout contact étroit avec une personne malade</string>
    <string name="advice6">-
Nettoyer et désinfecter les objets et surfaces fréquemment touchés</string>
    <string name="appname">coviguide</string>

    <string name="symptom1">
Symptômes les plus courants:</string>
    <string name="symptom2">Fiévre</string>
    <string name="symptom3">toux sèche</string>
    <string name="symptom4">fatigué</string>
    <string name="symptom5">
Symptômes moins courants:</string>
    <string name="symptom6">
mal de crâne</string>
    <string name="symptom7">
gorge irritée</string>
    <string name="symptom8">perte d \'odeur ou de goût</string>
    <string name="symptom9">la diarrhée</string>
    <string name="symptom10">Symptômes graves:</string>
    <string name="symptom11">difficulté à respirer ou essoufflement</string>
    <string name="symptom13">sensation d\'oppression ou de douleur dans la poitrine</string>
    <string name="symptom14">perte de la parole ou de la motricité</string>
    <string name="todo">
Choses à faire en quarantaine</string>
    <string name="todo1">-
Méditer</string>
    <string name="todo2">- Regarde quelque chose qui te fait rire</string>
    <string name="todo3">-
Étirez-vous ou faites de l\'exercice.</string>
    <string name="todo4">- Lisez un livre ou écoutez un prodcast.</string>
    <string name="todo5">- Regarder des films.</string>
    <string name="todo6">- Préparez des aliments sains.</string>
    <string name="choose_language">Choisir une langue:</string>
    <string name="fran_ais">Français</string>
    <string name="english">English</string>
    <string name="Email"> Email </string>
    <string name="go_to">GO</string>
    <string name="phone_number">phone number</string>
    <string name="have_account">Already have an account? Login</string>

</resources>
